@@ -1,10 +1,10 @@
 {
-  "count": 40,
+  "count": 39,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
