@@ -1,3 +1,11 @@
+2022-11-03T08:27:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3384076443 # 994
+* notice: last 14d: unq all: 6 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 682 2567 / 701 2607
+* notice: next accum: outdated-unq outdated-all / unq all: 682 2567 / 701 2606
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-10-20]
+
 2022-11-03T01:48:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3382434973 # 993
 * notice: last 14d: unq all: 6 40
